maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:27: error: not found: value m
	(m,n,o,p) match{
         ^JediEscaper:27: error: not found: value n
	(m,n,o,p) match{
           ^JediEscaper:27: error: not found: value o
	(m,n,o,p) match{
             ^JediEscaper:27: error: not found: value p
	(m,n,o,p) match{
               ^